--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "distributed-file-storage-system",
+  "name": "distributed-file-storage",
   "version": "1.0.0",
-  "description": "A distributed file storage system inspired by Dropbox, built using MinIO and gRPC. Features include file replication, metadata management, versioning, and eventual consistency across multiple nodes for high availability and resilience.",
-  "main": "index.js",
+  "description": "Distributed File Storage System",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "api": "node api-server.js",
+    "dev": "concurrently \"npm start\" \"npm run api\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.12.6",
-    "@grpc/proto-loader": "^0.7.13",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "minio": "^8.0.4",
-    "multer": "^1.4.5-lts.1"
+    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/proto-loader": "^0.7.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "minio": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "concurrently": "^8.0.1"
   }
 }
