--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "distributed-file-storage",
+  "name": "distributed-file-storage-system",
   "version": "1.0.0",
-  "description": "Distributed File Storage System",
-  "main": "server.js",
+  "description": "A distributed file storage system inspired by Dropbox",
+  "main": "api-server.js",
   "scripts": {
-    "start": "node server.js",
-    "api": "node api-server.js",
-    "dev": "concurrently \"npm start\" \"npm run api\""
+    "start": "node api-server.js",
+    "server": "node server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,13 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
     "@grpc/proto-loader": "^0.7.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "minio": "^7.0.0",
+    "minio": "^7.0.32",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
     "concurrently": "^8.0.1"
   }
 }
